quickstart/policy/e2e.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kube-agentic-networking
spec:
  controllerName: sigs.k8s.io/kube-agentic-networking-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentic-net-gateway
  namespace: quickstart-ns
spec:
  gatewayClassName: kube-agentic-networking
  listeners:
    - protocol: HTTPS
      port: 10001
      name: agentic-net-gateway-listener2
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-local-mcp
  namespace: quickstart-ns
spec:
  parentRefs:
    - name: agentic-net-gateway
      namespace: quickstart-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /local/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: local-mcp-backend # local mcp backend running in the Kubernetes cluster
          group: agentic.prototype.x-k8s.io
          kind: XBackend
          namespace: quickstart-ns
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-remote-mcp
  namespace: quickstart-ns
spec:
  parentRefs:
    - name: agentic-net-gateway
      namespace: quickstart-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /remote/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: remote-mcp-backend # remote mcp server
          group: agentic.prototype.x-k8s.io
          kind: XBackend
          namespace: quickstart-ns
